<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/Frame"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  <RelativeLayout android:layout_alignParentTop="true"
		 android:layout_height="wrap_content"
		 android:id="@+id/TopBar"
		 android:background="#1F8FFF"
		 android:layout_width="fill_parent">
		<TextView android:id="@+id/title_portal"
		 android:text="@string/title_library"
		 android:textColor="#EEEEEE"
		 android:textSize="15sp"
		 android:padding="2px"
		 android:layout_alignParentLeft="true"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"/>
		<TextView android:layout_alignParentRight="true"
		 android:layout_height="wrap_content"
		 android:id="@+id/title_uol"
		 android:text="@string/title_uol"
		 android:textColor="#EEEEEE"
		 android:textSize="15sp"
		 android:padding="2px"
		 android:layout_width="wrap_content"/>
  </RelativeLayout>
  <ScrollView android:id="@+id/ScrollView"
		 android:layout_height="fill_parent"
		 android:layout_width="fill_parent"
		 android:background="#EBF6FB"
		 android:layout_below="@id/TopBar"
		 android:layout_above="@+id/BottomBar" >
		<LinearLayout android:layout_height="wrap_content"
		 android:id="@+id/LinearLayout02" 
		 android:orientation="vertical"
		 android:layout_width="fill_parent">
			<TextView android:text="@string/author"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:textSize="20sp"
			 android:textStyle="normal"
			 android:textColor="#000000"
			 android:layout_margin="7dip"
			 android:id="@+id/text_author"/>
			<EditText android:id="@+id/edit_author" 
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:editable="false" /> 
			<View android:layout_height="2px"
				android:layout_width="fill_parent"
				android:background="#DDD6C6"/>
			<TextView android:text="@string/title"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:textSize="20sp"
			 android:textStyle="normal"
			 android:textColor="#000000"
			 android:layout_margin="7dip"
			 android:id="@+id/text_title"/>
			<EditText android:id="@+id/edit_title" 
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:editable="false" />
			<View android:layout_height="2px"
				android:layout_width="fill_parent"
				android:background="#DDD6C6"/>
			<TextView android:text="@string/imprint"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:textSize="20sp"
			 android:textStyle="normal"
			 android:textColor="#000000"
			 android:layout_margin="7dip"
			 android:id="@+id/text_imprint"/>
			<EditText android:id="@+id/edit_imprint" 
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:editable="false" /> 
			<View android:layout_height="2px"
				android:layout_width="fill_parent"
				android:background="#DDD6C6"/>
			<TextView android:text="@string/note"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:textSize="20sp"
			 android:textStyle="normal"
			 android:textColor="#000000"
			 android:layout_margin="7dip"
			 android:id="@+id/text_note"/>
			<EditText android:id="@+id/edit_note" 
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:editable="false" />
			<View android:layout_height="2px"
				android:layout_width="fill_parent"
				android:background="#DDD6C6"/> 
			<TextView android:text="@string/availability"
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:textSize="20sp"
			 android:textStyle="normal"
			 android:textColor="#000000"
			 android:layout_margin="7dip"
			 android:id="@+id/text_availability"/>
			<EditText android:id="@+id/edit_availability" 
			 android:layout_height="wrap_content"
			 android:layout_width="fill_parent"
			 android:editable="false" />
			<View android:layout_height="2px"
				android:layout_width="fill_parent"
				android:background="#DDD6C6"/>
		</LinearLayout>
	</ScrollView>
	<RelativeLayout android:layout_alignBottom="@id/ScrollView"
		 android:layout_height="wrap_content"
		 android:id="@+id/BottomBar"
		 android:background="#DDD6C6"
		 android:layout_width="fill_parent">
		<Button android:layout_height="wrap_content"
		 android:layout_width="wrap_content"
		 android:id="@+id/PrevItemButton" 
		 android:text="@string/prev"
		 android:layout_alignParentLeft="true"/>
		<Button android:layout_height="wrap_content"
		 android:layout_width="wrap_content"
		 android:id="@+id/ListButton"
		 android:textStyle="bold"
		 android:text="@string/list"
		 android:layout_centerInParent="true"/>
		<Button android:layout_height="wrap_content"
		 android:layout_width="wrap_content"
		 android:id="@+id/NextItemButton" 
		 android:text="@string/next"
		 android:layout_alignParentRight="true"/>
	</RelativeLayout>
</RelativeLayout>
